.metadata/.plugins/org.eclipse.cdt.ui/TP4Gui.build.log
16:08:29 **** Incremental Build of project TP4Gui ****
make debug 
make -f Makefile.Debug
make[1] : on entre dans le répertoire « /home/etudiant/Bureau/TP4/TP4Gui »
g++ -c -pipe -g -Wall -W -D_REENTRANT -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I../TP4Lib -Idebug -I. -o debug/tp4gui.o tp4gui.cpp
tp4gui.cpp: In member function ‘void TP4Gui::AjouterPersonne()’:
tp4gui.cpp:23:2: error: expected ‘;’ before ‘AjouterPersonne’
  AjouterPersonne instanceFenetre(this);
  ^
tp4gui.cpp:24:8: error: ‘instanceFenetre’ was not declared in this scope
     if(instanceFenetre.exec())
        ^
Makefile.Debug:236 : la recette pour la cible « debug/tp4gui.o » a échouée
make[1] : on quitte le répertoire « /home/etudiant/Bureau/TP4/TP4Gui »
make[1]: *** [debug/tp4gui.o] Erreur 1
make: *** [debug] Erreur 2
Makefile:50 : la recette pour la cible « debug » a échouée

16:08:32 Build Finished (took 2s.434ms)

